2002-05-06  Piers Haken	<piersh@friskit.com>

	* cs-parser.jay: add 'override' attribute to System.Object.Finalize

2002-05-06  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Constructor.Emit): Set the IsStatic flag in the
	EmitContext during the instance constructor initializer
	resolution, to stop access to instance variables.

	This is mandated by the spec, last paragraph of the `constructor
	initializers' section. 

2002-05-05  Miguel de Icaza  <miguel@ximian.com>

	* cs-parser.jay, class.cs (Accessor): new class used to represent
	an accessor (get or set).  In the past we used `null' to represent
	a missing accessor.  But this is ambiguous because there was no
	way to tell in abstract indexers/properties if one of them was
	specified.

	Now there is a way of addressing that.

	* expression.cs (Indexers.GetIndexersForType): Use TypeManager.MemberLookup
	instead of FindMembers.

	* class.cs (TypeContainer.EmitFieldInitializer): Do not typecast
	the result of Assign.Resolve as Assign, but rather as ExpressionStatement.

	* attribute.cs: Treat indexers and properties as the same in terms
	of applying attributes

	* ecore.cs (FindMostEncompassedType): Use statically initialized
	EmptyExpressions()s like we do elsewhere to avoid creating useless
	objects (and we take this out of the tight loop).

	(GetConversionOperators): Move the code to extract the actual
	operators to a separate routine to clean things up.

2002-05-04  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (FieldExpr): Remove un-needed tests for null, since now
	events are always registered FieldBuilders.
	
	* class.cs (FieldBase): New class shared by Fields 

	* delegate.cs: If we are a toplevel delegate, use our full name.
	If we are a nested delegate, then only use our tail name.

2002-05-02  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (IsApplicable): Ensure that we add the "&" to
	ref/out types before comparing it with the type of the argument.

	(IsParamsMethodApplicable): Ditto.
